--- a/cssyoooo.css
+++ b/cssyoooo.css
@@ -1,19 +1,21 @@
 body
 {
-background-image:url("file:///C:/Users/Nick/Pictures/DiamondWallpaper.jpg");
+background-image:url("Triang.jpg");
 background-repeat:no-repeat;
 padding: 15px;
 font-family:verdana;
 font-size:85%;
-margin-right:150px;
+margin-right:400px;
 }
 
 h1
 {
-border:4px solid #295266;
-color:#295266;
+border-left:4px solid #295266;
+border-bottom: 4px solid #295266;
+color:#292236;
 font-size: 300%;
-text-align: center;
+text-align: left;
+padding:15px
 }
 
 p
